# DES-Instrument-Cluster

./: README.md
Arduino/: README.md  arduino-sensor-can.ino
Arduino/arduino-sensor/: arduino-sensor-can.ino
Dashboard/: BatteryDisplay.qml  CMakeLists.txt  Dashboard.qml  Footer.qml  Header.qml  README.md  Speedometer.qml  Tachometer.qml  canreader.cpp  canreader.h  i2cina219.cpp  i2cina219.h  main.cpp
Dashboard/assets/shaders/: colorzone.frag
IDashboardBridge/: README.md
IDashboardBridge/can0/: idashboardbridge.cpp  idashboardbridge.h
IDashboardBridge/vcan0/: idashboardbridge.cpp  idashboardbridge.h
VCANEmulator/: CMakeLists.txt  README.md  SpeedControl.qml  canbusdatamanager.cpp  canbusdatamanager.h  main.cpp
